# ea_lh

./: README.md  pyproject.toml
banvic_dw/: dbt_project.yml
banvic_dw/models/bronze/: bronze_agencias.sql  bronze_clientes.sql  bronze_colaborador_agencia.sql  bronze_colaboradores.sql  bronze_contas.sql  bronze_data.sql  bronze_ipca_historico.sql  bronze_propostas_credito.sql  bronze_selic_historico.sql  bronze_transacoes.sql  source.yml
banvic_dw/models/gold/comercial/: dim_agencias.sql  dim_colaboradores.sql  dim_conta_cliente.sql  dim_data.sql  dim_taxas.sql  fact_propostas_credito.sql  fact_transacoes.sql  schema.yml
banvic_dw/models/silver/: schema.yml  silver_agencias.sql  silver_clientes.sql  silver_colaborador_agencia.sql  silver_colaboradores.sql  silver_contas.sql  silver_data.sql  silver_ipca_historico.sql  silver_propostas_credito.sql  silver_selic_historico.sql  silver_transacoes.sql
data/processed/: ipca_historico.csv  selic_historico.csv
data/raw/: serie_historica_ipca.xlsx  serie_historica_selic.xlsx
scr/: main.py
