[tool.poetry]
name = "ea-lh"
version = "0.1.0"
description = "Projeto de DW para o BanVic"
authors = ["datalopes1 <datalopes1@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dbt-core = "^1.9.1"
dbt-bigquery = "^1.9.1"
openpyxl = "^3.1.5"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
